--- a/bluesky-boot-dependencies/pom.xml
+++ b/bluesky-boot-dependencies/pom.xml
@@ -1,13 +1,8 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
-  <groupId>net.luversof.boot</groupId>
-  <artifactId>bluesky-boot-build</artifactId>
+    <groupId>net.luversof.boot</groupId>
+	<artifactId>bluesky-boot-dependencies</artifactId>
   <packaging>pom</packaging>
-  <modules>
-  	<module>bluesky-boot-dependencies</module>
-  	<module>bluesky-boot-parent</module>
-  	<module>bluesky-boot-autoconfigure</module>
-  </modules>
   <parent>
   	<groupId>org.springframework.boot</groupId>
   	<artifactId>spring-boot-dependencies</artifactId>
