--- a/bluesky-boot-dependencies/pom.xml
+++ b/bluesky-boot-dependencies/pom.xml
@@ -1,11 +1,14 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-  <modelVersion>4.0.0</modelVersion>
-    <groupId>net.luversof.boot</groupId>
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+	<modelVersion>4.0.0</modelVersion>
+	<groupId>net.luversof.boot</groupId>
 	<artifactId>bluesky-boot-dependencies</artifactId>
-  <packaging>pom</packaging>
-  <parent>
-  	<groupId>org.springframework.boot</groupId>
-  	<artifactId>spring-boot-dependencies</artifactId>
-  	<version>1.5.3.RELEASE</version>
-  </parent>
+	<packaging>pom</packaging>
+	<dependencies>
+	</dependencies>
+	<parent>
+		<artifactId>spring-boot-parent</artifactId>
+		<groupId>org.springframework.boot</groupId>
+		<version>1.5.3.RELEASE</version>
+	</parent>
 </project>
