--- a/pom.xml
+++ b/pom.xml
@@ -7,6 +7,7 @@
   	<module>bluesky-boot-dependencies</module>
   	<module>bluesky-boot-parent</module>
   	<module>bluesky-boot-autoconfigure</module>
+  	<module>bluesky-boot-starters</module>
   </modules>
   <parent>
   	<groupId>org.springframework.boot</groupId>
