--- a/bluesky-boot-dependencies/pom.xml
+++ b/bluesky-boot-dependencies/pom.xml
@@ -10,8 +10,12 @@
 	<parent>
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
-		<version>2.0.0.M2</version>
+		<version>2.0.0.M3</version>
 	</parent>
+	<properties>
+	</properties>
+	<dependencyManagement>
+	</dependencyManagement>
 	<repositories>
 		<repository>
 			<id>spring-snapshots</id>
