--- a/bluesky-boot-starters/pom.xml
+++ b/bluesky-boot-starters/pom.xml
@@ -10,5 +10,6 @@
   <packaging>pom</packaging>
   <modules>
   	<module>bluesky-boot-starter</module>
+  	<module>bluesky-boot-starter-parent</module>
   </modules>
 </project>
