--- a/bluesky-boot-starters/bluesky-boot-starter/pom.xml
+++ b/bluesky-boot-starters/bluesky-boot-starter/pom.xml
@@ -12,5 +12,9 @@
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter</artifactId>
 		</dependency>
+		<dependency>
+			<groupId>net.luversof.boot</groupId>
+			<artifactId>bluesky-boot-autoconfigure</artifactId>
+		</dependency>
 	</dependencies>
 </project>
