--- a/pom.xml
+++ b/pom.xml
@@ -14,6 +14,7 @@
 			<modules>
 				<module>bluesky-boot-autoconfigure</module>
 				<module>bluesky-boot-dependencies</module>
+				<module>bluesky-boot-docs</module>
 				<module>bluesky-boot-parent</module>
 				<module>bluesky-boot-starters</module>
 			</modules>
