--- a/bluesky-boot-starters/pom.xml
+++ b/bluesky-boot-starters/pom.xml
@@ -15,5 +15,6 @@
   	<module>bluesky-boot-starter-jdbc</module>
   	<module>bluesky-boot-starter-mybatis</module>
   	<module>bluesky-boot-starter-mongodb</module>
+  	<module>bluesky-boot-starter-data-rest</module>
   </modules>
 </project>
