--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -11,7 +11,7 @@ sonar.sourceEncoding=UTF-8
 sonar.exclusions=bluesky-boot-parent/**/*,**/generated-sources/*,**/test/*
 #sonar.test.exclusions=**/test/*
 
-sonar.modules=bluesky-boot-autoconfigure,\
+sonar.modules=bluesky-boot-autoconfigure
 #bluesky-boot-parent,\
 #bluesky-boot-starters,\
 
