--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -4,11 +4,11 @@ sonar.projectVersion=0.0.1-SHAPSHOT
 
 sonar.scm.provider=git
 
-sonar.sources=src
+sonar.sources=src/main/java
 sonar.java.binaries=.
 sonar.java.source=1.8
 sonar.sourceEncoding=UTF-8
-sonar.exclusions=bluesky-boot-parent/**/*,**/generated-sources/*,**/test/*
+sonar.exclusions=**/test/**/*
 #sonar.test.exclusions=**/test/*
 
 sonar.modules=bluesky-boot-autoconfigure
