Spring Boot 2.0.0.RC1 적용

--- a/bluesky-boot-autoconfigure/src/main/resources/jdbc/jdbc-opdev.properties
+++ b/bluesky-boot-autoconfigure/src/main/resources/jdbc/jdbc-opdev.properties
@@ -3,8 +3,8 @@ datasource.common.url=localhost
 datasource.common.port=3306
 datasource.common.username=root
 datasource.common.password=root
-datasource.common.driver-class-name=${datasource.mysql.driver-class-name}
-datasource.common.protocol=${datasource.mysql.protocol}
+datasource.common.driver-class-name=${datasource.mariadb.driver-class-name}
+datasource.common.protocol=${datasource.mariadb.protocol}
 
 
 #temp
