batch 설정 추가 중간

--- a/bluesky-boot-autoconfigure/pom.xml
+++ b/bluesky-boot-autoconfigure/pom.xml
@@ -23,6 +23,14 @@
 			<optional>true</optional>
 		</dependency>
 		
+		<!-- (s) batch -->
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-batch</artifactId>
+			<optional>true</optional>
+		</dependency>
+		<!-- (e) batch -->
+		
 		<!-- (s) data-jpa -->
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
