--- a/bluesky-boot-starters/pom.xml
+++ b/bluesky-boot-starters/pom.xml
@@ -16,5 +16,6 @@
   	<module>bluesky-boot-starter-mybatis</module>
   	<module>bluesky-boot-starter-mongodb</module>
   	<module>bluesky-boot-starter-data-rest</module>
+  	<module>bluesky-boot-starter-batch</module>
   </modules>
 </project>
