jdbc 설정 2.0.0.RC1 기준 변경

--- a/bluesky-boot-autoconfigure/src/main/resources/jdbc/jdbc.properties
+++ b/bluesky-boot-autoconfigure/src/main/resources/jdbc/jdbc.properties
@@ -1,11 +1,4 @@
-datasource.mysql.driver-class-name=com.mysql.jdbc.Driver
-datasource.mysql.protocol=jdbc:mysql
+datasource.mariadb.urlPrefix=jdbc:mariadb://localhost:3306
 
-datasource.mariadb.driver-class-name=org.mariadb.jdbc.Driver
-datasource.mariadb.protocol=jdbc:mariadb
+datasource.mysql.urlPrefix=jdbc:mysql://localhost:3307
 
-
-
-#common
-datasource.common.validation-query=SELECT 1
-datasource.common.test-on-borrow=true
