--- a/bluesky-boot-autoconfigure/src/main/resources/jdbc/jdbc-localdev.properties
+++ b/bluesky-boot-autoconfigure/src/main/resources/jdbc/jdbc-localdev.properties
@@ -1,7 +1,7 @@
 #common
-datasource.common.url=127.0.0.1
-datasource.common.port=3306
-datasource.common.username=root
-datasource.common.password=root
-datasource.common.driver-class-name=${datasource.mariadb.driver-class-name}
-datasource.common.protocol=${datasource.mariadb.protocol}
+datasource.default.url=${datasource.mariadb.urlPrefix}
+datasource.default.username=root
+datasource.default.password=root
+datasource.default.type=com.zaxxer.hikari.HikariDataSource
+
+
