--- a/bluesky-boot-autoconfigure/src/main/resources/jdbc/jdbc-opdev.properties
+++ b/bluesky-boot-autoconfigure/src/main/resources/jdbc/jdbc-opdev.properties
@@ -1,16 +1,7 @@
 #common
-datasource.common.url=localhost
-datasource.common.port=3306
-datasource.common.username=root
-datasource.common.password=root
-datasource.common.driver-class-name=${datasource.mariadb.driver-class-name}
-datasource.common.protocol=${datasource.mariadb.protocol}
-
-
-#temp
-#datasource.common.url=127.0.0.1
-#datasource.common.port=3306
-#datasource.common.username=bluesky
-#datasource.common.password=bluesky
+datasource.default.url=${datasource.mariadb.urlPrefix}
+datasource.default.username=root
+datasource.default.password=root
+datasource.default.type=com.zaxxer.hikari.HikariDataSource
 
 
