--- a/bluesky-boot-autoconfigure/src/main/resources/config/bootstrap.yml
+++ b/bluesky-boot-autoconfigure/src/main/resources/config/bootstrap.yml
@@ -16,6 +16,7 @@ management.endpoints.web:
   base-path: /actuator
 eureka:
   client:
+    region: korea
     serviceUrl:
       defaultZone: http://localhost:8761/eureka/    
   instance:
