--- a/bluesky-boot-dependencies/pom.xml
+++ b/bluesky-boot-dependencies/pom.xml
@@ -10,11 +10,12 @@
 	<parent>
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
-		<version>2.0.0.RC1</version>
+		<version>2.0.0.RC2</version>
 	</parent>
 	<properties>
 		<java.version>1.8</java.version>
 		<bluesky-boot.version>0.0.1-SNAPSHOT</bluesky-boot.version>
+		<spring-cloud.version>Finchley.M7</spring-cloud.version>
 	</properties>
 	<dependencyManagement>
 		<dependencies>
@@ -60,6 +61,17 @@
 				<version>${bluesky-boot.version}</version>
 			</dependency>
 			<!-- (e) spring boot -->
+
+			<!-- (s) spring cloud -->
+			<!-- 버전관리를 편하게 하려고 cloud 의존성을 여기서 관리하고 있으나 분리하는 것이 좋다. -->
+			<dependency>
+				<groupId>org.springframework.cloud</groupId>
+				<artifactId>spring-cloud-dependencies</artifactId>
+				<version>${spring-cloud.version}</version>
+				<type>pom</type>
+				<scope>import</scope>
+			</dependency>
+			<!-- (e) spring cloud -->
 
 
 			<!-- (s) mybatis -->
