java 8 로 변경 (9는 나중에 확인..)

--- a/bluesky-boot-autoconfigure/src/main/resources/jdbc/jdbc-localdev.properties
+++ b/bluesky-boot-autoconfigure/src/main/resources/jdbc/jdbc-localdev.properties
@@ -1,5 +1,5 @@
 #common
-datasource.default.url=${datasource.mariadb.urlPrefix}
+datasource.default.url=jdbc:mariadb://192.168.0.11:3306
 datasource.default.username=root
 datasource.default.password=root
 datasource.default.type=com.zaxxer.hikari.HikariDataSource
