--- a/bluesky-boot-autoconfigure/src/main/resources/jdbc/jdbc.properties
+++ b/bluesky-boot-autoconfigure/src/main/resources/jdbc/jdbc.properties
@@ -1,4 +1,4 @@
-datasource.mariadb.urlPrefix=jdbc:mariadb://localhost:3306
+#datasource.mariadb.urlPrefix=jdbc:mariadb://localhost:3306
 
-datasource.mysql.urlPrefix=jdbc:mysql://localhost:3307
+#datasource.mysql.urlPrefix=jdbc:mysql://localhost:3307
 
