--- a/bluesky-boot-autoconfigure/pom.xml
+++ b/bluesky-boot-autoconfigure/pom.xml
@@ -19,6 +19,19 @@
 			<optional>true</optional>
 		</dependency>
 		
+		<!-- (s) cloud -->
+		<dependency>
+			<groupId>org.springframework.cloud</groupId>
+			<artifactId>spring-cloud-starter-config</artifactId>
+			<optional>true</optional>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-actuator</artifactId>
+			<optional>true</optional>
+		</dependency>
+		<!-- (e) cloud -->
+		
 		<!-- (s) batch -->
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
