--- a/bluesky-boot-autoconfigure/src/main/resources/jdbc/jdbc-opdev.properties
+++ b/bluesky-boot-autoconfigure/src/main/resources/jdbc/jdbc-opdev.properties
@@ -1,5 +1,5 @@
 #common
-datasource.default.url=${datasource.mariadb.urlPrefix}
+datasource.default.url=jdbc:mariadb://127.0.0.1:3306
 datasource.default.username=root
 datasource.default.password=root
 datasource.default.type=com.zaxxer.hikari.HikariDataSource
