--- a/bluesky-boot-autoconfigure/src/main/resources/config/bootstrap.yml
+++ b/bluesky-boot-autoconfigure/src/main/resources/config/bootstrap.yml
@@ -23,8 +23,8 @@ management.endpoints.web:
 eureka:
   client:
     region: korea
-#    serviceUrl:
-#      defaultZone: http://localhost:8761/eureka/    
+    serviceUrl:
+      defaultZone: http://netflix-eureka-server:8761/eureka/    
   instance:
     instanceId: ${spring.application.name}:${vcap.application.instance_id:${spring.application.instance_id:${random.value}}}
     statusPageUrlPath: ${management.endpoints.web.base-path}/info
