--- a/bluesky-boot-autoconfigure/pom.xml
+++ b/bluesky-boot-autoconfigure/pom.xml
@@ -1,4 +1,5 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+<project xmlns="http://maven.apache.org/POM/4.0.0"
+	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<parent>
@@ -18,7 +19,7 @@
 			<artifactId>spring-boot-configuration-processor</artifactId>
 			<optional>true</optional>
 		</dependency>
-		
+
 		<!-- (s) cloud -->
 		<dependency>
 			<groupId>org.springframework.cloud</groupId>
@@ -36,7 +37,7 @@
 			<optional>true</optional>
 		</dependency>
 		<!-- (e) cloud -->
-		
+
 		<!-- (s) batch -->
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
@@ -44,7 +45,7 @@
 			<optional>true</optional>
 		</dependency>
 		<!-- (e) batch -->
-		
+
 		<!-- (s) data-jpa -->
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
@@ -52,7 +53,7 @@
 			<optional>true</optional>
 		</dependency>
 		<!-- (e) data-jpa -->
-		
+
 		<!-- (s) data-mongodb -->
 		<dependency>
 			<groupId>org.springframework.data</groupId>
@@ -60,7 +61,7 @@
 			<optional>true</optional>
 		</dependency>
 		<!-- (e) data-mongodb -->
-		
+
 		<!-- (s) data-rest -->
 		<dependency>
 			<groupId>org.springframework.data</groupId>
@@ -68,7 +69,7 @@
 			<optional>true</optional>
 		</dependency>
 		<!-- (e) data-rest -->
-		
+
 		<!-- (s) jdbc -->
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
@@ -76,7 +77,7 @@
 			<optional>true</optional>
 		</dependency>
 		<!-- (e) jdbc -->
-		
+
 		<!-- (s) mybatis -->
 		<dependency>
 			<groupId>org.mybatis.spring.boot</groupId>
@@ -89,6 +90,14 @@
 			<optional>true</optional>
 		</dependency>
 		<!-- (e) mybatis -->
+
+		<!-- (s) boot admin -->
+		<dependency>
+			<groupId>de.codecentric</groupId>
+			<artifactId>spring-boot-admin-starter-client</artifactId>
+			<optional>true</optional>
+		</dependency>
+		<!-- (e) boot admin -->
 
 		<!-- (s) test -->
 		<dependency>
