--- a/bluesky-boot-autoconfigure/src/main/resources/config/bootstrap.yml
+++ b/bluesky-boot-autoconfigure/src/main/resources/config/bootstrap.yml
@@ -1,21 +1,45 @@
-#cloud config가 이곳에 있는 것은 올바른 처리가 아니다
 spring:
     profiles: opdev
     cloud:
         config:
             uri: http://localhost:8888
+    boot:
+      admin:
+        client:
+          url: http://localhost:8889
+eureka:
+  client:
+    service-url:
+      defaultZone: http://localhost:8761/eureka/
 ---
 spring:
     profiles: localdev
     cloud:
         config:
-            uri: http://localhost:8888
+            uri: http://192.168.0.11:8888
+    boot:
+      admin:
+        client:
+          url: http://192.168.0.11:8889
+eureka:
+  client:
+    service-url:
+      defaultZone: http://localhost:8761/eureka/
 ---
 spring:
     profiles: dockerdev
     cloud:
         config:
-            uri: http://docker:8888
+            uri: http://config-server:8888
+    boot:
+      admin:
+        client:
+          url: http://admin-server:8889
+eureka:
+  client:
+    service-url:
+      defaultZone: http://netflix-eureka-server:8761/eureka/
+      
 ---
 management.endpoints.web:
   exposure.include: '*'
@@ -23,8 +47,6 @@ management.endpoints.web:
 eureka:
   client:
     region: korea
-    serviceUrl:
-      defaultZone: http://netflix-eureka-server:8761/eureka/    
   instance:
     instanceId: ${spring.application.name}:${vcap.application.instance_id:${spring.application.instance_id:${random.value}}}
     statusPageUrlPath: ${management.endpoints.web.base-path}/info
