--- a/bluesky-boot-dependencies/pom.xml
+++ b/bluesky-boot-dependencies/pom.xml
@@ -85,6 +85,19 @@
 				<version>1.0.2</version>
 			</dependency>
 			<!-- (e) mybatis -->
+
+			<!-- (s) boot-admin -->
+			<dependency>
+				<groupId>de.codecentric</groupId>
+				<artifactId>spring-boot-admin-starter-server</artifactId>
+				<version>2.0.2</version>
+			</dependency>
+			<dependency>
+				<groupId>de.codecentric</groupId>
+				<artifactId>spring-boot-admin-starter-client</artifactId>
+				<version>2.0.2</version>
+			</dependency>
+			<!-- (e) boot-admin -->
 		</dependencies>
 	</dependencyManagement>
 	<repositories>
