--- a/bluesky-boot-autoconfigure/src/main/resources/config/bootstrap.yml
+++ b/bluesky-boot-autoconfigure/src/main/resources/config/bootstrap.yml
@@ -24,7 +24,7 @@ spring:
 eureka:
   client:
     service-url:
-      defaultZone: http://localhost:8761/eureka/
+      defaultZone: http://192.168.0.11:8761/eureka/
 ---
 spring:
     profiles: dockerdev
@@ -48,6 +48,7 @@ eureka:
   client:
     region: korea
   instance:
+    prefer-ip-address: true
     instanceId: ${spring.application.name}:${vcap.application.instance_id:${spring.application.instance_id:${random.value}}}
     statusPageUrlPath: ${management.endpoints.web.base-path}/info
     healthCheckUrlPath: ${management.endpoints.web.base-path}/health
