--- a/bluesky-boot-dependencies/pom.xml
+++ b/bluesky-boot-dependencies/pom.xml
@@ -2,18 +2,16 @@
 	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
-	<groupId>net.luversof.boot</groupId>
 	<artifactId>bluesky-boot-dependencies</artifactId>
-	<version>0.0.1-SNAPSHOT</version>
 	<packaging>pom</packaging>
 	<parent>
-		<groupId>org.springframework.boot</groupId>
-		<artifactId>spring-boot-starter-parent</artifactId>
-		<version>2.0.4.RELEASE</version>
+		<groupId>net.luversof.boot</groupId>
+		<artifactId>bluesky-boot-build</artifactId>
+		<version>${revision}</version>
+		<relativePath>../</relativePath>
 	</parent>
 	<properties>
 		<java.version>8</java.version>
-		<bluesky-boot.version>0.0.1-SNAPSHOT</bluesky-boot.version>
 		<spring-cloud.version>Finchley.SR1</spring-cloud.version>
 	</properties>
 	<dependencyManagement>
@@ -22,42 +20,42 @@
 			<dependency>
 				<groupId>net.luversof.boot</groupId>
 				<artifactId>bluesky-boot-autoconfigure</artifactId>
-				<version>${bluesky-boot.version}</version>
+				<version>${revision}</version>
 			</dependency>
 			<dependency>
 				<groupId>net.luversof.boot</groupId>
 				<artifactId>bluesky-boot-starter</artifactId>
-				<version>${bluesky-boot.version}</version>
+				<version>${revision}</version>
 			</dependency>
 			<dependency>
 				<groupId>net.luversof.boot</groupId>
 				<artifactId>bluesky-boot-starter-batch</artifactId>
-				<version>${bluesky-boot.version}</version>
+				<version>${revision}</version>
 			</dependency>
 			<dependency>
 				<groupId>net.luversof.boot</groupId>
 				<artifactId>bluesky-boot-starter-data-jpa</artifactId>
-				<version>${bluesky-boot.version}</version>
+				<version>${revision}</version>
 			</dependency>
 			<dependency>
 				<groupId>net.luversof.boot</groupId>
 				<artifactId>bluesky-boot-starter-data-rest</artifactId>
-				<version>${bluesky-boot.version}</version>
+				<version>${revision}</version>
 			</dependency>
 			<dependency>
 				<groupId>net.luversof.boot</groupId>
 				<artifactId>bluesky-boot-starter-jdbc</artifactId>
-				<version>${bluesky-boot.version}</version>
+				<version>${revision}</version>
 			</dependency>
 			<dependency>
 				<groupId>net.luversof.boot</groupId>
 				<artifactId>bluesky-boot-starter-data-mongodb</artifactId>
-				<version>${bluesky-boot.version}</version>
+				<version>${revision}</version>
 			</dependency>
 			<dependency>
 				<groupId>net.luversof.boot</groupId>
 				<artifactId>bluesky-boot-starter-mybatis</artifactId>
-				<version>${bluesky-boot.version}</version>
+				<version>${revision}</version>
 			</dependency>
 			<!-- (e) spring boot -->
 
@@ -100,34 +98,6 @@
 			<!-- (e) boot-admin -->
 		</dependencies>
 	</dependencyManagement>
-	<profiles>
-		<profile>
-			<id>dockerdev</id>
-			<repositories>
-				<repository>
-					<id>bluesky-docker-nexus</id>
-					<url>http://nexus:8081/repository/maven-public/</url>
-					<releases>
-						<enabled>true</enabled>
-					</releases>
-					<snapshots>
-						<enabled>true</enabled>
-						<updatePolicy>always</updatePolicy>
-					</snapshots>
-				</repository>
-			</repositories>
-			<distributionManagement>
-				<repository>
-					<id>bluesky-releases</id>
-					<url>http://nexus:8081/repository/maven-releases/</url>
-				</repository>
-				<snapshotRepository>
-					<id>bluesky-snapshots</id>
-					<url>http://nexus:8081/repository/maven-snapshots/</url>
-				</snapshotRepository>
-			</distributionManagement>
-		</profile>
-	</profiles>
 	<repositories>
 		<repository>
 			<id>spring-snapshots</id>
