--- a/bluesky-boot-dependencies/pom.xml
+++ b/bluesky-boot-dependencies/pom.xml
@@ -98,6 +98,14 @@
 				<version>2.0.2</version>
 			</dependency>
 			<!-- (e) boot-admin -->
+
+			<!-- (s) thymeleaf-layout-dialect -->
+			<dependency>
+				<groupId>com.github.zhanhb</groupId>
+				<artifactId>thymeleaf-layout-dialect</artifactId>
+				<version>2.3.0</version>
+			</dependency>
+			<!-- (e) thymeleaf-layout-dialect -->
 		</dependencies>
 	</dependencyManagement>
 	<profiles>
