--- a/bluesky-boot-autoconfigure/pom.xml
+++ b/bluesky-boot-autoconfigure/pom.xml
@@ -56,8 +56,8 @@
 
 		<!-- (s) data-mongodb -->
 		<dependency>
-			<groupId>org.springframework.data</groupId>
-			<artifactId>spring-data-mongodb</artifactId>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-data-mongodb-reactive</artifactId>
 			<optional>true</optional>
 		</dependency>
 		<!-- (e) data-mongodb -->
