--- a/bluesky-boot-docs/pom.xml
+++ b/bluesky-boot-docs/pom.xml
@@ -9,6 +9,11 @@
 		<relativePath>../bluesky-boot-parent</relativePath>
 	</parent>
 	<artifactId>bluesky-boot-docs</artifactId>
+	<properties>
+		<main.basedir>${basedir}/../..</main.basedir>
+		<asciidoctor.maven.plugin.version>2.0.0-RC.1</asciidoctor.maven.plugin.version>
+		<asciidoctorj.version>2.0.0</asciidoctorj.version>
+	</properties>
 	<dependencies>
 		<dependency>
 			<groupId>net.luversof.boot</groupId>
@@ -20,133 +25,53 @@
 		</dependency>
 	</dependencies>
 
+
+
 	<build>
+		<defaultGoal>process-resources</defaultGoal>
 		<plugins>
 			<plugin>
-				<groupId>com.agilejava.docbkx</groupId>
-				<artifactId>docbkx-maven-plugin</artifactId>
-				<version>2.0.15</version>
-				<configuration>
-					<sourceDirectory>${basedir}/target/generated-docs</sourceDirectory>
-					<includes>index.xml</includes>
-					<xincludeSupported>true</xincludeSupported>
-					<chunkedOutput>false</chunkedOutput>
-					<foCustomization>${basedir}/src/main/docbook/xsl/pdf.xsl</foCustomization>
-					<useExtensions>1</useExtensions>
-					<highlightSource>1</highlightSource>
-					<highlightXslthlConfig>${basedir}/src/main/docbook/xsl/xslthl-config.xml</highlightXslthlConfig>
-				</configuration>
+				<groupId>org.asciidoctor</groupId>
+				<artifactId>asciidoctor-maven-plugin</artifactId>
+				<version>${asciidoctor.maven.plugin.version}</version>
 				<dependencies>
 					<dependency>
-						<groupId>net.sf.xslthl</groupId>
-						<artifactId>xslthl</artifactId>
-						<version>2.1.0</version>
-					</dependency>
-					<dependency>
-						<groupId>net.sf.docbook</groupId>
-						<artifactId>docbook-xml</artifactId>
-						<version>5.0-all</version>
-						<classifier>resources</classifier>
-						<type>zip</type>
-						<scope>runtime</scope>
+						<groupId>org.asciidoctor</groupId>
+						<artifactId>asciidoctorj</artifactId>
+						<version>${asciidoctorj.version}</version>
 					</dependency>
 				</dependencies>
+				<configuration>
+					<!-- If you set baseDir to ${project.basedir}, top-level includes are 
+						resolved relative to the project root -->
+					<!-- <baseDir>${project.basedir}</baseDir> -->
+					<!-- Attributes common to all output formats -->
+					<attributes>
+						<revnumber>${project.version}</revnumber>
+						<revdate>${maven.build.timestamp}</revdate>
+						<organization>${project.organization.name}</organization>
+					</attributes>
+				</configuration>
 				<executions>
 					<execution>
-						<id>html-single</id>
+						<id>asciidoc-to-html</id>
+						<phase>generate-resources</phase>
 						<goals>
-							<goal>generate-html</goal>
+							<goal>process-asciidoc</goal>
 						</goals>
-						<phase>prepare-package</phase>
 						<configuration>
-							<htmlCustomization>${basedir}/src/main/docbook/xsl/html-singlepage.xsl</htmlCustomization>
-							<targetDirectory>${basedir}/target/docbook/htmlsingle</targetDirectory>
-							<postProcess>
-								<copy
-									todir="${basedir}/target/contents/reference/htmlsingle">
-									<fileset dir="${basedir}/target/docbook/htmlsingle">
-										<include name="**/*.html" />
-									</fileset>
-								</copy>
-								<copy
-									todir="${basedir}/target/contents/reference/htmlsingle">
-									<fileset dir="${basedir}/src/main/docbook">
-										<include name="**/*.css" />
-										<include name="**/*.png" />
-										<include name="**/*.gif" />
-										<include name="**/*.jpg" />
-									</fileset>
-								</copy>
-							</postProcess>
-						</configuration>
-					</execution>
-					<execution>
-						<id>html</id>
-						<goals>
-							<goal>generate-html</goal>
-						</goals>
-						<phase>prepare-package</phase>
-						<configuration>
-							<htmlCustomization>${basedir}/src/main/docbook/xsl/html-multipage.xsl</htmlCustomization>
-							<targetDirectory>${basedir}/target/docbook/html</targetDirectory>
-							<chunkedOutput>true</chunkedOutput>
-							<postProcess>
-								<copy todir="${basedir}/target/contents/reference/html">
-									<fileset dir="${basedir}/target/docbook/html">
-										<include name="**/*.html" />
-									</fileset>
-								</copy>
-								<copy todir="${basedir}/target/contents/reference/html">
-									<fileset dir="${basedir}/src/main/docbook">
-										<include name="**/*.css" />
-										<include name="**/*.png" />
-										<include name="**/*.gif" />
-										<include name="**/*.jpg" />
-									</fileset>
-								</copy>
-							</postProcess>
-						</configuration>
-					</execution>
-					<execution>
-						<id>pdf</id>
-						<goals>
-							<goal>generate-pdf</goal>
-						</goals>
-						<phase>prepare-package</phase>
-						<configuration>
-							<foCustomization>${basedir}/src/main/docbook/xsl/pdf.xsl</foCustomization>
-							<targetDirectory>${basedir}/target/docbook/pdf</targetDirectory>
-							<postProcess>
-								<copy todir="${basedir}/target/contents/reference">
-									<fileset dir="${basedir}/target/docbook">
-										<include name="**/*.pdf" />
-									</fileset>
-								</copy>
-								<move
-									file="${basedir}/target/contents/reference/pdf/index.pdf"
-									tofile="${basedir}/target/contents/reference/pdf/spring-boot-reference.pdf" />
-							</postProcess>
-						</configuration>
-					</execution>
-					<execution>
-						<id>epub</id>
-						<goals>
-							<goal>generate-epub3</goal>
-						</goals>
-						<phase>prepare-package</phase>
-						<configuration>
-							<epubCustomization>${basedir}/src/main/docbook/xsl/epub.xsl</epubCustomization>
-							<targetDirectory>${basedir}/target/docbook/epub</targetDirectory>
-							<postProcess>
-								<copy todir="${basedir}/target/contents/reference/epub">
-									<fileset dir="${basedir}/target/docbook">
-										<include name="**/*.epub" />
-									</fileset>
-								</copy>
-								<move
-									file="${basedir}/target/contents/reference/epub/index.epub"
-									tofile="${basedir}/target/contents/reference/epub/spring-boot-reference.epub" />
-							</postProcess>
+							<backend>html5</backend>
+							<preserveDirectories>true</preserveDirectories>
+							<sourceHighlighter>coderay</sourceHighlighter>
+							<attributes>
+								<toc>left</toc>
+								<icons>font</icons>
+								<sectanchors>true</sectanchors>
+								<!-- set the idprefix to blank -->
+								<idprefix />
+								<idseparator>-</idseparator>
+								<docinfo1>true</docinfo1>
+							</attributes>
 						</configuration>
 					</execution>
 				</executions>
