--- a/pom.xml
+++ b/pom.xml
@@ -6,6 +6,11 @@
 	<artifactId>bluesky-boot-build</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<packaging>pom</packaging>
+	<parent>
+		<groupId>org.springframework.boot</groupId>
+		<artifactId>spring-boot-starter-parent</artifactId>
+		<version>2.1.4.RELEASE</version>
+	</parent>
 	<properties>
 		<main.basedir>${basedir}/../..</main.basedir>
 	</properties>
