security 분기 처리 중간 커밋

--- a/bluesky-boot-autoconfigure/pom.xml
+++ b/bluesky-boot-autoconfigure/pom.xml
@@ -143,6 +143,14 @@
 			<optional>true</optional>
 		</dependency>
 		<!-- (e) boot admin -->
+		
+		<!-- (s) reactive security -->
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-security</artifactId>
+			<optional>true</optional>
+		</dependency>
+		<!-- (e) reactive security -->
 
 		<!-- (s) servlet web -->
 		<dependency>
