--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -4,11 +4,12 @@ sonar.projectVersion=0.0.1-SHAPSHOT
 
 sonar.scm.provider=git
 
-sonar.sources=src/main/java
+sonar.sources=src/main
+sonar.tests=src/test
 sonar.java.binaries=.
-sonar.java.source=1.8
+sonar.java.source=11
 sonar.sourceEncoding=UTF-8
-sonar.exclusions=**/test/**/*
+#sonar.exclusions=**/test/**/*
 #sonar.test.exclusions=**/test/*
 
 sonar.modules=bluesky-boot-autoconfigure
