--- a/.gitignore
+++ b/.gitignore
@@ -208,6 +208,7 @@ dependency-reduced-pom.xml
 buildNumber.properties
 .mvn/timing.properties
 .mvn/wrapper/maven-wrapper.jar
+.flattened-pom.xml
 
 ### SonarQube ###
 # SonarQube ignore files.
