--- a/bluesky-boot-docs/pom.xml
+++ b/bluesky-boot-docs/pom.xml
@@ -23,8 +23,8 @@
 			<artifactId>bluesky-boot-starter</artifactId>
 		</dependency>
 		<dependency>
-			<groupId>org.springframework.boot</groupId>
-			<artifactId>spring-boot-starter-test</artifactId>
+			<groupId>net.luversof.boot</groupId>
+			<artifactId>bluesky-boot-starter-test</artifactId>
 			<scope>test</scope>
 		</dependency>
 		<dependency>
