--- a/bluesky-boot-starters/pom.xml
+++ b/bluesky-boot-starters/pom.xml
@@ -1,21 +1,48 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-  <modelVersion>4.0.0</modelVersion>
-  <parent>
-    <groupId>net.luversof.boot</groupId>
-    <artifactId>bluesky-boot-parent</artifactId>
-    <version>0.0.1-SNAPSHOT</version>
-    <relativePath>../bluesky-boot-parent</relativePath>
-  </parent>
-  <artifactId>bluesky-boot-starters</artifactId>
-  <packaging>pom</packaging>
-  <modules>
-  	<module>bluesky-boot-starter</module>
-  	<module>bluesky-boot-starter-batch</module>
-  	<module>bluesky-boot-starter-data-jpa</module>
-  	<module>bluesky-boot-starter-data-rest</module>
-  	<module>bluesky-boot-starter-data-mongodb-reactive</module>
-  	<module>bluesky-boot-starter-jdbc</module>
-  	<module>bluesky-boot-starter-mybatis</module>
-  	<module>bluesky-boot-starter-parent</module>
-  </modules>
+<project xmlns="http://maven.apache.org/POM/4.0.0"
+	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+	<modelVersion>4.0.0</modelVersion>
+	<parent>
+		<groupId>net.luversof.boot</groupId>
+		<artifactId>bluesky-boot-parent</artifactId>
+		<version>0.0.1-SNAPSHOT</version>
+		<relativePath>../bluesky-boot-parent</relativePath>
+	</parent>
+	<artifactId>bluesky-boot-starters</artifactId>
+	<packaging>pom</packaging>
+	<modules>
+		<module>bluesky-boot-starter</module>
+		<module>bluesky-boot-starter-batch</module>
+		<module>bluesky-boot-starter-data-jpa</module>
+		<module>bluesky-boot-starter-data-rest</module>
+		<module>bluesky-boot-starter-data-mongodb-reactive</module>
+		<module>bluesky-boot-starter-jdbc</module>
+		<module>bluesky-boot-starter-mybatis</module>
+		<module>bluesky-boot-starter-parent</module>
+		<module>bluesky-boot-starter-test</module>
+	</modules>
+	<dependencies>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-test</artifactId>
+			<exclusions>
+				<exclusion>
+					<groupId>junit</groupId>
+					<artifactId>junit</artifactId>
+				</exclusion>
+			</exclusions>
+		</dependency>
+		<dependency>
+			<groupId>org.junit.jupiter</groupId>
+			<artifactId>junit-jupiter-engine</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.junit.jupiter</groupId>
+			<artifactId>junit-jupiter-api</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.junit.jupiter</groupId>
+			<artifactId>junit-jupiter-params</artifactId>
+		</dependency>
+	</dependencies>
 </project>
