--- a/bluesky-boot-autoconfigure/src/main/resources/data/jpa/data-jpa.properties
+++ b/bluesky-boot-autoconfigure/src/main/resources/data/jpa/data-jpa.properties
@@ -4,6 +4,9 @@ spring.jpa.databasePlatform=org.hibernate.dialect.MySQL5Dialect
 
 spring.jpa.properties.hibernate.dialect.storage_engine=innodb
 
+spring.jpa.generate-ddl=true
+spring.jpa.hibernate.ddl-auto=create
+
 #spring.jpa.properties.jadira.usertype.autoRegisterUserTypes=true
 #spring.jpa.properties.jadira.usertype.databaseZone=jvm
 
