--- a/pom.xml
+++ b/pom.xml
@@ -53,7 +53,7 @@
 			<repositories>
 				<repository>
 					<id>bluesky-nexus-k8s</id>
-					<url>http://localhost:8082/repository/maven-public/</url>
+					<url>http://nexus-service:8082/repository/maven-public/</url>
 					<releases>
 						<enabled>true</enabled>
 					</releases>
@@ -66,11 +66,11 @@
 			<distributionManagement>
 				<repository>
 					<id>bluesky-releases</id>
-					<url>http://localhost:8082/repository/maven-releases/</url>
+					<url>http://nexus-service:8082/repository/maven-releases/</url>
 				</repository>
 				<snapshotRepository>
 					<id>bluesky-snapshots</id>
-					<url>http://localhost:8082/repository/maven-snapshots/</url>
+					<url>http://nexus-service:8082/repository/maven-snapshots/</url>
 				</snapshotRepository>
 			</distributionManagement>
 		</profile>
